tests/fixtures/invalid/round_none_dict.py
# Cannot call round() with None, Dict[str, int]
x = round(None, {"a": 1})
